[package]
name = "everything-ipc"
version = "0.1.0"
edition = "2024"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
tracing = "0.1"
widestring = "1"
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
] }
