[package]
name = "everything-ipc"
version = "0.1.0"
edition = "2024"
description = "Rust binding for Everything's IPC SDK"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]


doc = ["dep:document-features"]

[dependencies]
document-features = { version = "0.2", optional = true }
tracing = "0.1"
widestring = "1"
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
] }

[package.metadata.docs.rs]
# We want to document all features.
all-features = true
# Since this crate's feature setup is pretty complicated, it is worth opting
# into a nightly unstable option to show the features that need to be enabled
# for public API items. To do that, we set 'docsrs', and when that's enabled,
# we enable the 'doc_auto_cfg' feature.
#
# To test this locally, run:
# ```
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
# $env:RUSTDOCFLAGS="--cfg docsrs"; cargo +nightly doc --all-features
# ```
rustdoc-args = ["--cfg", "docsrs"]
