[package]
name = "everything-plugin"
version = "0.1.1"
edition = "2024"
description = "Rust binding for Everything's plugin SDK"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = ["tracing", "serde", "winio"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-panic", "dep:anstream"]
serde = ["dep:serde", "dep:serde_json"]
ui = ["dep:windows-sys", "windows-sys/Win32_UI_WindowsAndMessaging", "dep:futures-channel", "dep:futures-util"]
winio = ["ui", "dep:winio"]
# 1214 -> 1233 KiB
# TODO: Affect Everything labels, limit to thread local?
winio-darkmode = ["winio/windows-dark-mode"]

[dependencies]
anstream = { version = "0.6", optional = true }
bon = "3"
futures-channel = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-panic = { version = "0.1.2", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
windows-sys = { version = "0.59", optional = true }

[dependencies.winio]
version = "0.5.0"
default-features = false
optional = true
git = "https://github.com/compio-rs/winio"
rev = "d57fa507ba27a4dc71887f202ec4eb594f5acb0e"

[dev-dependencies]

[[example]]
name = "test"
crate-type = ["cdylib"]

[[example]]
name = "basic"
crate-type = ["cdylib"]
