[package]
name = "everything-plugin"
version = "0.2.1"
edition = "2024"
description = "Rust binding for Everything's plugin SDK"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = ["tracing", "serde", "winio"]
# TODO: Disable on release?
tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-panic", "dep:anstream"]
serde = ["dep:serde", "dep:serde_json"]
ui = ["dep:futures-channel", "dep:futures-util"]
winio = ["ui", "dep:winio"]
# 1214 -> 1233 KiB
# TODO: Affect Everything labels, limit to thread local?
winio-darkmode = ["winio/win32-dark-mode"]

[dependencies]
anstream = { version = "0.6", optional = true }
bon = "3"
futures-channel = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-panic = { version = "0.1.2", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
widestring = "1"
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
] }

[dependencies.winio]
version = ">=0.7,<0.8"
default-features = false
optional = true
# git = "https://github.com/compio-rs/winio"
# rev = "d57fa507ba27a4dc71887f202ec4eb594f5acb0e"

[dev-dependencies]

[[example]]
name = "test"
crate-type = ["cdylib"]

[[example]]
name = "basic"
crate-type = ["cdylib"]

[[example]]
name = "options"
crate-type = ["cdylib"]
